# img2epub

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  Taskfile.yml
.github/workflows/: automerge.yml  publish-crates.yml
images/: metadata.json
src/: epub.rs  lib.rs  main.rs
src/epub/: converter.rs  epub.rs  images.rs
