[package]
name = "img2epub"
version = "0.1.11"
edition = "2021"
authors = ["Takumi Mori"]
description = "Convert images to EPUB"
include = ["README.md", "src/**/*"]
default-run = "img2epub"
license = "MIT"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["derive"] }
epub = "2.1.2"
glob = "0.3.1"
image = "0.25.4"
regex = "1.11.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.131"
uuid = { version = "1.11.0", features = ["v4", "fast-rng"] }
