[package]
name = "img2epub"
version = "0.1.18"
edition = "2024"
authors = ["Takumi Mori"]
description = "Convert images to EPUB"
include = ["README.md", "src/**/*"]
default-run = "img2epub"
license = "MIT"

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.39"
clap = { version = "4.5.28", features = ["derive"] }
epub = "2.1.2"
glob = "0.3.2"
image = "0.25.5"
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
uuid = { version = "1.13.1", features = ["v4", "fast-rng"] }
